--- a/index.html
+++ b/index.html
@@ -24,23 +24,33 @@
       </nav>
     </header>
     <!-- Здесь будет слайдер-->
-    <ul class="slide-switcher">
-      <li class="sl-radio"
-      <button class="slider-btn">
-        Слайд 1
-      </button>
-    </li>
-      <li class="sl-radio"
-      <button class="slider-btn">
-        Слайд 2
-      </button>
-    </li>
-      <li class="sl-radio"
-      <button class="slider-btn">
-        Слайд 3
-      </button>
-    </li>
-  </ul>
+    <section class="slide-switcher">
+         <input class="visually-hiddesn" type="radio" id="slide-1" name="toggle" checked>
+         <input class="visually-hidden" type="radio" id="slide-2" name="toggle">
+         <input class="visually-hidden" type="radio" id="slide-3" name="toggle">
+         <div class="slider-controls">
+           <label class="slider-controls-item slider-controls-item--1" for="slide-1">Первый</label>
+           <label class="slider-controls-item slider-controls-item--2" for="slide-2">Второй</label>
+           <label class="slider-controls-item slider-controls-item--3" for="slide-3">Третий</label>
+         </div>
+         <ul class="slider-list">
+           <li class="slider-item">
+             <h3>Долго, дорого,<br> скрупулезно.</h3>
+             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+             <a class="btn btn-big" href="#">Узнать больше</a>
+           </li>
+           <li class="slider-item">
+             <h3>Любим математику как никто другой</h3>
+             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+             <a class="btn btn-big" href="#">Узнать больше</a>
+           </li>
+           <li class="slider-item">
+             <h3>Только ночь,<br> только хардкор</h3>
+             <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+             <a class="btn btn-big" href="#">Узнать больше</a>
+           </li>
+         </ul>
+</section>
     <main class="basic">
       <section class="amenities">
         <h3 class="visually-hidden">Услуги</h3>
@@ -76,19 +86,27 @@
     <h4 class="static-title">
           C 2004 года любим точность во всем:
         </h4>
-        <tr class="table">
-          <td class="order-1">Уровень самоотдачи</td><!--146%-->
-          <td class="order-2">Соблюдение сроков:</td><!--100%-->
-          <td class="order-2">Минимальная предоплата:</td><!--50%-->
+         <table class="numbers">
+        <tr class="line-text-1">
+          <td class="order-1"> Уровень самоотдачи: </td> <!--146%-->
+          <td class="order-2"> Соблюдение сроков: </td> <!--100%-->
+          <td class="order-3"> Минимальная предоплата: </td> <!--50%-->
+          </tr>
+          <tr class="line-numders-2">
+            <td class="cell-1"> 146%</td>
+            <td class="cell-2"> 100%</td>
+            <td class="cell-3"> 50%</td>
+          </table>
       </section>
       <article class="logotype">
-        <img src="img/htmlacademy.png" width="260" height="180">
-        <img src="img/borodinski.png" width="260" height="180">
-        <img src="img/pink.png" width="260" height="180">
-        <img src="img/mishka.png" width="260" height="180">
+        <img src="img/htmlacademy.png" width="260" height="180" alt="Логотип академии">
+        <img src="img/borodinski.png" width="260" height="180" alt="Логотип барбершопа" >
+        <img src="img/pink.png" width="260" height="180" alt="Логотип сайта pink">
+        <img src="img/mishka.png" width="260" height="180" alt="Логотип сайта мишки">
     </article>
-      <sectiom class="map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400" frameborder="0"></iframe>
+      <section class="map">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400">
+        </iframe>
       </section>
       <footer class="main-footer">
 <p class="contacts">
