--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         </ul>
       </section>
     </main>
-      <section>
+      <section class="flex-company">
+        <div class="slogan-general">
         <h2 class="slogan">
           Мы маленькая, но гордая
           <br>
@@ -83,20 +84,24 @@
         <p>Слайдшоу и видео для корпоративных презентаций</p>
       </li>
     </ul>
+  </div>
+  <div class="flex-static">
+    <img src="img/nerds-illustration.jpg" class="nerds-image" width="360" height="208">
     <h4 class="static-title">
           C 2004 года любим точность во всем:
-        </h4>
+          </h4>
          <table class="numbers">
-        <tr class="line-text-1">
-          <td class="order-1"> Уровень самоотдачи: </td> <!--146%-->
-          <td class="order-2"> Соблюдение сроков: </td> <!--100%-->
-          <td class="order-3"> Минимальная предоплата: </td> <!--50%-->
+        <tr class="line-numbers">
+          <td class="order-1"> 146% </td> <!--146%-->
+          <td class="order-2"> 100% </td> <!--100%-->
+          <td class="order-3"> 50% </td> <!--50%-->
           </tr>
-          <tr class="line-numders-2">
-            <td class="cell-1"> 146%</td>
-            <td class="cell-2"> 100%</td>
-            <td class="cell-3"> 50%</td>
+          <tr class="line-text">
+            <td class="cell-1"> Уровень самоотдачи</td>
+            <td class="cell-2"> соблюдение сроков</td>
+            <td class="cell-3"> минимальная предоплата</td>
           </table>
+        </div>
       </section>
       <article class="logotype">
         <img src="img/htmlacademy.png" width="260" height="180" alt="Логотип академии">
