--- a/catalog.html
+++ b/catalog.html
@@ -28,9 +28,9 @@
     </header>
     <main class="basic">
       <h1 class="page-title">Магазин готовых шаблонов</h1>
+      <h2 class="visually-hidden">Фильтр товаров</h2>
       <section class="filters">
-        <h2 class="visually-hidden">Фильтр товаров</h2>
-        <!-- Здесь будет форма -->
+          <!-- Здесь будет форма -->
         <form action="https://echo.htmlacademy.ru" method="post">
         <h3>СТОИМОСТЬ</h3>
        <label for="from">От</label>
@@ -50,9 +50,9 @@
           <input type="submit" value="Показать">
           </form>
       </section>
+          <h3 class="visualy-hidden">Список сайтов</h3>
       <section class="catalog">
-        <h3 class="visualy-hidden">Список сайтов</h3>
-        <ul class="catalog-list">
+    <ul class="catalog-list">
           <li class="catalog-item">
               <a href="catalog-item.html">
               <span class="catalog-item-title">SEDONA</span>
@@ -147,6 +147,8 @@
             </button>
         </li>
       </ul>
+      </section>
+      <section>
       <ul class="pagination-list">
         <li class="pagination-list"><a href="#">1</a></li>
         <li class="pagination-list"><a href="#">2</a></li>
@@ -154,8 +156,8 @@
       </ul>
     </section>
   </main>
-  <sectiom class="map">
-    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400" frameborder="0"></iframe>
+  <section class="map-catalog">
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1350" height="400"></iframe>
   </section>
   <footer class="main-footer">
   <p class="contacts">
@@ -164,6 +166,7 @@
   Телефон: +7 (812) 275-75-75
   <div class="footer-social">
   <h2> Давай дружить, это выгодно!</h2>
+  <p> Скидка 10% для друзей из соц. сетей</p>
   <a class="social-button" href="#"> Вконтакте </a>
   <a class="social-button" href="#"> Фейсбук </a>
   <a class="social-button" href="#"> Инстаграмм </a>
