--- a/index.html
+++ b/index.html
@@ -51,16 +51,29 @@
            </li>
          </ul>
 </section>
+<section>
     <main class="basic">
-      <section class="amenities">
-        <h3 class="visually-hidden">Услуги</h3>
-        <ul class="amenities-list">
-          <li><a class="button left" href="web-sites.html">Веб-сайты</a></li>
-          <li><a class="button center" href="aplications.html">Приложения</a></li>
-          <li><a class="button right" href="presentation">Презентации</a></li>
-        </ul>
+      <section class="promo-block">
+           <article class="promo-block-item">
+             <img src="img/sites1.jpg" width="240" height="124" alt="Мы делаем веб-сайты!">
+             <h3>Веб-сайты</h3>
+             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+           </article>
+           <article class="promo-block-item">
+             <img src="img/aplications.jpg" width="240" height="124" alt="Мы делаем приложения!">
+             <h3>Приложения</h3>
+             <p>Покорите топ-10 приложений в AppStrore и Google Play</p>
+             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+           </article>
+           <article class="promo-block-item">
+             <img src="img/presentation.jpg" alt="Мы создаем и презентации тоже.">
+             <h3>Презентации</h3>
+             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+           </article>
       </section>
-    </main>
+        </main>
       <section class="flex-company">
         <div class="slogan-general">
         <h2 class="slogan">
@@ -110,7 +123,7 @@
         <img src="img/mishka.png" width="260" height="180" alt="Логотип сайта мишки">
     </article>
       <section class="map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1400" height="400">
         </iframe>
       </section>
       <footer class="main-footer">
@@ -118,12 +131,17 @@
   Дизайн-Студия "Нердс" <br>
   Адрес: г. Санкт-петербург, ул. Б.Конюшенная, д.19/8
   Телефон: +7 (812) 275-75-75
+  <div class="social-footer">
   <div class="footer-social">
-    <h3> Давай дружить, это выгодно!</h3>
     <a class="social-button" href="#">Вконтакте</a>
     <a class="social-button" href="#">Фейсбук</a>
     <a class="social-button" href="#">Инстаграмм</a>
   </div>
+  <div class="footer-text">
+    <h3>  Давай дружить, это выгодно!</h3>
+    <p> Скидка 10% для друзей из соц.сетей!</p>
+  </div>
+</div>
    </footer>
 <div class="modal-window">
     <form action="https://echo.htmlacademy.ru" method="post">
