--- a/index.html
+++ b/index.html
@@ -57,20 +57,26 @@
            <article class="promo-block-item">
              <img src="img/sites1.jpg" width="240" height="124" alt="Мы делаем веб-сайты!">
              <h3>Веб-сайты</h3>
-             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+             <p>Мир никогда не будет прежним после
+               <br>
+             того как увидит ваш сайт!</p>
+             <a class="button left" href="#">ЗАКАЗАТЬ</a>
            </article>
            <article class="promo-block-item">
              <img src="img/aplications.jpg" width="240" height="124" alt="Мы делаем приложения!">
              <h3>Приложения</h3>
-             <p>Покорите топ-10 приложений в AppStrore и Google Play</p>
-             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+             <p>Покорите топ-10 приложений
+               <br>
+              в AppStrore и Google Play</p>
+             <a class="button center" href="#">ЗАКАЗАТЬ</a>
            </article>
            <article class="promo-block-item">
              <img src="img/presentation.jpg" alt="Мы создаем и презентации тоже.">
              <h3>Презентации</h3>
-             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-             <a class="btn" href="#">ЗАКАЗАТЬ</a>
+             <p>Вы даже не подозреваете,
+               <br>
+              насколько вы изумительны!</p>
+             <a class="button right" href="#">ЗАКАЗАТЬ</a>
            </article>
       </section>
         </main>
@@ -110,9 +116,9 @@
           <td class="order-3"> 50% </td> <!--50%-->
           </tr>
           <tr class="line-text">
-            <td class="cell-1"> Уровень самоотдачи</td>
-            <td class="cell-2"> соблюдение сроков</td>
-            <td class="cell-3"> минимальная предоплата</td>
+            <td class="cell-1"> Уровень<br> самоотдачи</td>
+            <td class="cell-2"> соблюдение <br>сроков</td>
+            <td class="cell-3"> минимальная<br> предоплата</td>
           </table>
         </div>
       </section>
