--- a/catalog.html
+++ b/catalog.html
@@ -150,9 +150,10 @@
       </section>
       <section>
       <ul class="pagination-list">
-        <li class="pagination-list"><a href="#">1</a></li>
-        <li class="pagination-list"><a href="#">2</a></li>
-        <li class="pagination-list"><a href="#">3</a></li>
+        <li class="pagination-list-1"><a href="#">1</a></li>
+        <li class="pagination-list-2"><a href="#">2</a></li>
+        <li class="pagination-list-3"><a href="#">3</a></li>
+        <li class="pagination-list-4"><a href="#">Следующая</a></li>
       </ul>
     </section>
   </main>
