--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
            </li>
          </ul>
 </section>
-<section>
+<section class="general-basic">
     <main class="basic">
       <section class="promo-block">
            <article class="promo-block-item">
@@ -129,7 +129,7 @@
         <img src="img/mishka.png" width="260" height="180" alt="Логотип сайта мишки">
     </article>
       <section class="map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1345" height="400">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1200" height="400">
         </iframe>
         <p class="contacts">
           Дизайн-Студия "Нердс" <br>
