--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -13,7 +13,7 @@
         <img src="img/nerds-logo.svg" width="160" height="65"
         alt="Логотип студии НЕРДС">
         <ul class="site-navigation">
-          <li><a href="studio.html">Информация</a></li>
+          <li class="studio"><a href="studio.html">Студия</a></li>
           <li><a href="clients.html">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="contacts.html">Контакты</a></li>
@@ -35,8 +35,9 @@
          </div>
          <ul class="slider-list">
            <li class="slider-item">
-             <h3>Долго, дорого,<br> скрупулезно.</h3>
-             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+             <img class="image-slider-1" src="img/nerds-index-slide1.png" width="760" height="431">
+             <h3 class="slider-slogan">Долго, дорого,<br> скрупулезно</h3>
+             <p class="slider-description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
              <a class="btn btn-big" href="#">Узнать больше</a>
            </li>
            <li class="slider-item">
