--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             </ul>
       </nav>
     </header>
-    <!-- Здесь будет слайдер-->
     <section class="slide-switcher">
-         <input class="visually-hiddesn" type="radio" id="slide-1" name="toggle" checked>
+         <input class="visually-hidden" type="radio" id="slide-1" name="toggle" checked>
          <input class="visually-hidden" type="radio" id="slide-2" name="toggle">
          <input class="visually-hidden" type="radio" id="slide-3" name="toggle">
          <div class="slider-controls">
@@ -34,47 +33,42 @@
            <label class="slider-controls-item slider-controls-item--3" for="slide-3">Третий</label>
          </div>
          <ul class="slider-list">
-           <li class="slider-item">
-             <img class="image-slider-1" src="img/nerds-index-slide1.png" width="760" height="431">
-             <h3 class="slider-slogan">Долго, дорого,<br> скрупулезно</h3>
+           <li class="slider-item-1">
+             <h3 class="slider-slogan">Долго, дорого,<br> скрупулезно.</h3>
              <p class="slider-description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
              <a class="btn btn-big" href="#">Узнать больше</a>
            </li>
-           <li class="slider-item">
+           <li class="slider-item-2">
              <h3>Любим математику как никто другой</h3>
              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
              <a class="btn btn-big" href="#">Узнать больше</a>
            </li>
-           <li class="slider-item">
+           <li class="slider-item-3">
              <h3>Только ночь,<br> только хардкор</h3>
              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
              <a class="btn btn-big" href="#">Узнать больше</a>
            </li>
          </ul>
 </section>
-<section class="general-basic">
-    <main class="basic">
+<main class="basic">
       <section class="promo-block">
-           <article class="promo-block-item">
-             <img src="img/sites1.jpg" width="240" height="124" alt="Мы делаем веб-сайты!">
-             <h3>Веб-сайты</h3>
-             <p>Мир никогда не будет прежним после
+           <article class="promo-block-item-1">
+             <h3 class="fonts-promo-item-1">ВЕБ-САЙТЫ</h3>
+             <p>Мир никогда не будет прежним 
                <br>
-             того как увидит ваш сайт!</p>
+               после того как увидит ваш сайт!</p>
              <a class="button left" href="#">ЗАКАЗАТЬ</a>
            </article>
-           <article class="promo-block-item">
-             <img src="img/aplications.jpg" width="240" height="124" alt="Мы делаем приложения!">
-             <h3>Приложения</h3>
-             <p>Покорите топ-10 приложений
-               <br>
-              в AppStrore и Google Play</p>
+           <article class="promo-block-item-2">
+             <h3 class="fonts-promo-item-2">ПРИЛОЖЕНИЯ</h3>
+             <p class="fonts-promo-item-3">Покорите топ-10 приложений в
+              <br> 
+              AppStrore и Google Play</p>
              <a class="button center" href="#">ЗАКАЗАТЬ</a>
            </article>
-           <article class="promo-block-item">
-             <img src="img/presentation.jpg" alt="Мы создаем и презентации тоже.">
-             <h3>Презентации</h3>
-             <p>Вы даже не подозреваете,
+           <article class="promo-block-item-3">
+             <h3 class="fonts-promo-item-4">Презентации</h3>
+             <p class="fonts-promo-item-5">Вы даже не подозреваете,
                <br>
               насколько вы изумительны!</p>
              <a class="button right" href="#">ЗАКАЗАТЬ</a>
@@ -106,7 +100,6 @@
     </ul>
   </div>
   <div class="flex-static">
-    <img src="img/nerds-illustration.jpg" class="nerds-image" width="360" height="208">
     <h4 class="static-title">
           C 2004 года любим точность во всем:
           </h4>
@@ -139,12 +132,12 @@
         </p>
       </section>
       <footer class="main-footer">
-  <div class="social-footer">
-  <div class="footer-social">
-    <a class="social-button" href="#">Вконтакте</a>
-    <a class="social-button" href="#">Фейсбук</a>
-    <a class="social-button" href="#">Инстаграмм</a>
-  </div>
+        <div class="social-footer">
+<div class="footer-social">
+  <a class="social-button" href="#">Вконтакте</a>
+  <a class="social-button" href="#">Фейсбук</a>
+  <a class="social-button" href="#">Инстаграмм</a>
+</div>
   <div class="footer-text">
     <h3>  Давай дружить, это выгодно!</h3>
     <p> Скидка 10% для друзей из соц.сетей!</p>
