--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
              <a class="button center" href="#">ЗАКАЗАТЬ</a>
            </article>
            <article class="promo-block-item-3">
-             <h3 class="fonts-promo-item-4">Презентации</h3>
+             <h3 class="fonts-promo-item-4">ПРЕЗЕНТАЦИИ</h3>
              <p class="fonts-promo-item-5">Вы даже не подозреваете,
                <br>
               насколько вы изумительны!</p>
@@ -78,7 +78,7 @@
       <section class="flex-company">
         <div class="slogan-general">
         <h2 class="slogan">
-          Мы маленькая, но гордая
+          Мы — маленькая, но гордая
           <br>
           дизайн-студия из Краснодара.
         </h2>
@@ -101,13 +101,13 @@
   </div>
   <div class="flex-static">
     <h4 class="static-title">
-          C 2004 года любим точность во всем:
+          C 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:
           </h4>
          <table class="numbers">
         <tr class="line-numbers">
-          <td class="order-1"> 146% </td> <!--146%-->
-          <td class="order-2"> 100% </td> <!--100%-->
-          <td class="order-3"> 50% </td> <!--50%-->
+          <td class="order-1"> 146% </td>
+          <td class="order-2"> 100% </td>
+          <td class="order-3"> 50% </td>
           </tr>
           <tr class="line-text">
             <td class="cell-1"> Уровень<br> самоотдачи</td>
